--- a/language/Amharic/strings.po
+++ b/language/Amharic/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -16,6 +16,10 @@ msgstr ""
 "Language: am\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+msgctxt "#602"
+msgid "Address"
+msgstr "አድራሻ"
+
 msgctxt "#603"
 msgid "Type"
 msgstr "አይነት"
@@ -23,6 +27,10 @@ msgstr "አይነት"
 msgctxt "#604"
 msgid "State"
 msgstr "አገር "
+
+msgctxt "#605"
+msgid "Address"
+msgstr "አድራሻ"
 
 msgctxt "#32000"
 msgid "Network"
@@ -103,6 +111,10 @@ msgstr "ይቀጥሉ "
 msgctxt "#32326"
 msgid "Are you sure?"
 msgstr "እርግጠኛ ኖት? "
+
+msgctxt "#32332"
+msgid "Address"
+msgstr "አድራሻ"
 
 msgctxt "#32334"
 msgid "Yes"
