--- a/language/Spanish (Mexico)/strings.po
+++ b/language/Spanish (Mexico)/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -123,6 +123,10 @@ msgstr "Puerto"
 msgctxt "#32191"
 msgid "Error"
 msgstr "Error"
+
+msgctxt "#32193"
+msgid "Service"
+msgstr "Servicio"
 
 msgctxt "#32212"
 msgid "Cancel"
