--- a/language/Tamil (India)/strings.po
+++ b/language/Tamil (India)/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -16,9 +16,21 @@ msgstr ""
 "Language: ta_IN\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "#602"
+msgid "Address"
+msgstr "முகவரி"
+
 msgctxt "#603"
 msgid "Type"
 msgstr "வகை:"
+
+msgctxt "#604"
+msgid "State"
+msgstr "மாநிலம்"
+
+msgctxt "#605"
+msgid "Address"
+msgstr "முகவரி"
 
 msgctxt "#32000"
 msgid "Network"
@@ -36,6 +48,10 @@ msgctxt "#32005"
 msgid "Type"
 msgstr "வகை:"
 
+msgctxt "#32006"
+msgid "State"
+msgstr "மாநிலம்"
+
 msgctxt "#32101"
 msgid "Network"
 msgstr "பிணையம்"
@@ -43,6 +59,10 @@ msgstr "பிணையம்"
 msgctxt "#32106"
 msgid "Username"
 msgstr "பயனர்பெயர்"
+
+msgctxt "#32110"
+msgid "Connection"
+msgstr "இணைப்பு"
 
 msgctxt "#32140"
 msgid "Save"
@@ -56,6 +76,18 @@ msgctxt "#32142"
 msgid "Refresh"
 msgstr "புதுப்பி"
 
+msgctxt "#32145"
+msgid "Unable to connect"
+msgstr "இணைக்க முடியவில்லை"
+
+msgctxt "#32150"
+msgid "Edit"
+msgstr "திருத்து"
+
+msgctxt "#32168"
+msgid "Port"
+msgstr "துறை"
+
 msgctxt "#32191"
 msgid "Error"
 msgstr "பிழை"
@@ -68,13 +100,29 @@ msgctxt "#32213"
 msgid "Exit"
 msgstr "வெளியேறு"
 
+msgctxt "#32303"
+msgid "Next"
+msgstr "அடுத்து"
+
 msgctxt "#32326"
 msgid "Are you sure?"
 msgstr "நீங்கள் உறுதியாக இருக்கிறீர்களா?"
 
+msgctxt "#32332"
+msgid "Address"
+msgstr "முகவரி"
+
+msgctxt "#32334"
+msgid "Yes"
+msgstr "ஆம்"
+
 msgctxt "#32335"
 msgid "No"
 msgstr "இல்லை"
+
+msgctxt "#32364"
+msgid "Update available"
+msgstr "புதுப்பி உள்ளது"
 
 msgctxt "#32371"
 msgid "Backup"
