--- a/language/Armenian/strings.po
+++ b/language/Armenian/strings.po
@@ -9,41 +9,57 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: Haitian (Haitian Creole) (http://www.transifex.com/projects/p/xbmc-addons/language/ht/)\n"
+"Language-Team: Armenian (http://www.transifex.com/projects/p/xbmc-addons/language/hy/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ht\n"
+"Language: hy\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgctxt "#32106"
-msgid "Username"
-msgstr "nom itilizateur"
+msgctxt "#603"
+msgid "Type"
+msgstr "Տիպ"
+
+msgctxt "#32005"
+msgid "Type"
+msgstr "Տիպ"
 
 msgctxt "#32140"
 msgid "Save"
-msgstr "Enregistre"
+msgstr "Հիշել"
 
 msgctxt "#32141"
 msgid "Delete"
-msgstr "Efface"
+msgstr "Ջնջել"
+
+msgctxt "#32142"
+msgid "Refresh"
+msgstr "Թարմեցնել"
+
+msgctxt "#32191"
+msgid "Error"
+msgstr "Սխալ"
+
+msgctxt "#32193"
+msgid "Service"
+msgstr "Ծառայություն"
 
 msgctxt "#32212"
 msgid "Cancel"
-msgstr "Anule"
+msgstr "Չեղարկել"
 
 msgctxt "#32303"
 msgid "Next"
-msgstr "Pwochen"
+msgstr "Հաջորդ"
 
 msgctxt "#32334"
 msgid "Yes"
-msgstr "Non"
+msgstr "Այո"
 
 msgctxt "#32335"
 msgid "No"
-msgstr "Wi"
+msgstr "Ոչ"
 
 msgctxt "#32382"
 msgid "Speed"
-msgstr "Vites"
+msgstr "Արագություն"
