--- a/language/Azerbaijani/strings.po
+++ b/language/Azerbaijani/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -20,14 +20,62 @@ msgctxt "#603"
 msgid "Type"
 msgstr "Növ"
 
+msgctxt "#32000"
+msgid "Network"
+msgstr "Şəbəkə"
+
+msgctxt "#32002"
+msgid "System"
+msgstr "Sistem"
+
 msgctxt "#32005"
 msgid "Type"
 msgstr "Növ"
+
+msgctxt "#32101"
+msgid "Network"
+msgstr "Şəbəkə"
+
+msgctxt "#32140"
+msgid "Save"
+msgstr "Saxla"
+
+msgctxt "#32141"
+msgid "Delete"
+msgstr "Sil"
+
+msgctxt "#32142"
+msgid "Refresh"
+msgstr "Təzələ"
+
+msgctxt "#32168"
+msgid "Port"
+msgstr "Port"
 
 msgctxt "#32191"
 msgid "Error"
 msgstr "Xəta"
 
+msgctxt "#32213"
+msgid "Exit"
+msgstr "Çıx"
+
+msgctxt "#32303"
+msgid "Next"
+msgstr "Növbəti"
+
+msgctxt "#32326"
+msgid "Are you sure?"
+msgstr "Əminsiniz?"
+
+msgctxt "#32334"
+msgid "Yes"
+msgstr "Hə"
+
 msgctxt "#32335"
 msgid "No"
 msgstr "Yox"
+
+msgctxt "#32382"
+msgid "Speed"
+msgstr "Sürət"
