--- a/language/Chinese (Simple)/strings.po
+++ b/language/Chinese (Simple)/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 设置"
 
 msgctxt "#601"
 msgid "Interface"
@@ -104,10 +100,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "配置 OpenELEC 系统的主机名，用于 Windows 系统中通过 \\\\主机名 或在 Mac OS 系统的 Finder 中用 SMB 服务器名访问共享。"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "设置首选的软键盘布局"
@@ -120,25 +112,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "设置物理键盘类型"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC 可以设置为自动或手动更新。自动更新仅适用于稳定版及其 RC 版。自动更新在测试版和开发版中自动禁用。"
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "启用当有可用更新时在屏幕上显示提示信息"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "点选以手动检查 OpenELEC 服务器上的新版本。"
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "如果你的 OpenELEC 连接有小尺寸 LCD 或 VFD 显示器，须相应设置正确的显示驱动。"
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "启用 OpenELEC 在空闲时将硬盘挂起（不包括系统盘）"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -152,21 +128,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "创建一个包含 OpenELEC 和 Kodi 的全部配置、数据库和缩略图的 tar 文件包。备份文件包保存到 /storage/backups"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "使用先前通过备份选项创建的 tar 备份文件包恢复系统配置和数据库"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]软复位[/COLOR]\n重置 OpenELEC 系统配置为默认设置（同时也重围 Kodi 配置，包括资料库信息，但不影响音视频媒体文件本身）"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]硬复位[/COLOR]\n重置 OpenELEC 系统以及 Kodi 的配置为默认设置（将删除存储分区上的所有内容）"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -228,10 +192,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "设置 Samba 共享的密码"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "启用内置 SSH 服务器。访问 SSH 控制台的用户名为“root”，密码为“openelec”。"
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "如果你已经拷贝私有 SSH 密钥到 HTPC 并希望禁用用户名和密码验证方式以增强安全性，请启用本功能。"
@@ -263,10 +223,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "使用 OBEX 文件传输，你可以通过蓝牙连接从其他设备无线传送诸如电影或图片之类的文件到 OpenELEC。"
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -660,10 +616,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "可更新"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "现在更新 OpenELEC 吗？"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "文件名"
@@ -808,33 +760,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "自动共享外置存储器"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "欢迎使用 [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "欢迎"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "本向导将指引你初始化设置 [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] - 设置你的所在地、时区并连接到至互联网。[CR][CR]这些设置都可以稍后在“程序>[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 配置”中进行更改。[CR][CR]现在让我们开启全新的 [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 体验，请选择你的区域并设置键盘布局，然后点击“下一步”。"
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "下一页"
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "为便于网络识别，你的新 [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 机器需要一个名称。[CR][CR]尽量选择有意义的名称 － 如安放的房间 － 这样你在网上看到就知道是哪台机器。[CR][CR]这个名称用于象 Samba 文件共享之类的网络服务。"
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "网络"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "为了下载电影和剧集的背景图、横幅和缩略图，播放 YouTube 等网站的流媒体视频，[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 需要连接到互联网。[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 也需要互联网连接来进行自身的系统更新。"
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -856,14 +792,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "共享及远程访问："
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 也支持 SSH 远程访问。本功能是为需要操作 [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 底层系统的高级用户而准备。默认的用户名为 [COLOR blue]root[/COLOR]，默认密码为 [COLOR blue]openelec[/COLOR]。"
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "为了在计算机之间共享你的文件，[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 内置了 Samba 服务器，你可以用你熟悉的 Windows 资源管理器或者 Mac OS X Finder 来访问 Samba 服务器共享的文件。"
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "启用"
@@ -879,10 +807,6 @@ msgstr "配置服务："
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "谢谢"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 安装已完成，现在可以进入 Kodi 设置你的媒体资料库。如果需要进一步帮助，请参考 wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 是由一个志愿者团队用业余时间进行开发的。虽然这是一个志愿者项目，我们还需要承担宽带接入和开发资源的费用。如果你觉得 [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 对你有帮助，我们很乐意接收你的捐款（金额不限）。 [CR][CR]我们希望你可以尽情享受 [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 带来的乐趣。如果你还需要任何帮助，可以访问我们的网站 openelec.tv"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -907,10 +831,6 @@ msgstr "还原"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "还原系统设置"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "还原 OpenELEC 设置"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1011,10 +931,6 @@ msgstr "以下信息格式不正确："
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "立刻检查更新："
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
