--- a/language/Croatian/strings.po
+++ b/language/Croatian/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: hr\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] postavke"
 
 msgctxt "#601"
 msgid "Interface"
@@ -104,10 +100,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Podesite naziv računala vašeg OpenELEC sustava. To će biti korišteno za HTPC \\\\naziv računala u Windowsima i naziv SMB poslužitelja u Mac OS Finder"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "Podesite 1. softverski raspored tipkovnice"
@@ -120,25 +112,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Podesite tip fizičke tipkovnice"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC se može podesiti za ručno ili automatsko ažuriranje. Automatska ažuriranja su dostupna na stabilnim izdanjima i kandidatima za stabilno izdanje. Automatska ažuriranja su onemogućena na beta i razvojnim izdanjima"
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "Postavite na UKLJUČENO i zaslonska obavijest će biti prikazana kada je novo ažuriranje dostupno"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Kliknite za ručnu provjeru ažuriranja na OpenELEC poslužiteljima"
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Ako imate mali LCD ili VFD spojen na vaš OpenELEC sustav morate postaviti odgovarajući upravljački program zaslona"
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "Postavite na UKLJUČENO i OpenELEC  će isključiti spojene diskove (ne glavni disk sustava) kada je u mirovanju"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -152,21 +128,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Stvorite tar arhivu koja sadrži sva OpenELEC i Kodi podešavanja, postavke, baze podataka i sadržaj minijatura. Datoteke sigurnog kopiranja biti će spremljene u /storage/backups"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Vrati tar archivu sigurnosne kopije prije stvorene koristeći mogućnost sigurnosnog kopiranja iznad"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]SOFT RESET[/COLOR]\nTrajno vrati OpenELEC OS postavke na zadano (isto tako vrati Kodi postavke uključujući vašu zbirku. Vaše medijske datoteke - glazba/video/itd. nisu uključene)"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]HARD RESET[/COLOR]\nTrajno vrati OpenELEC OS i Kodi postavke na zadano (sve na vašoj particiji pohrane biti će obrisano)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -228,10 +192,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Postavite lozinku za Samba dijeljenje"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "Postavite na UKLJUČENO za omogućavanje ugrađenog SSH poslužitelja. SSH konzoli se može pristupiti sa 'root' korisničkim imenom i 'openELEC' lozinkom."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Postavite na UKLJUČENO ako ste kopirali privatni SSH ključ na vaš HTPC i želite poboljšati sigurnost onemogućavanjem SSH korisničkog imena i lozinke autentifikacije."
@@ -263,10 +223,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "Sa OBEX prijenosom datoteka možete slati datotke, npr. filmove ili slike putem Bluetootha na OpenELEC."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -660,10 +616,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "Dostupna ažuriranja"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "Želite li ažurirati OpenELEC odmah?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "Naziv datoteke"
@@ -808,33 +760,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "Automatsko dijeljenje vanjskih uređaja"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Dobrodošli u [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Dobrodošli"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Ovaj čarobnjak će vas voditi kroz proces postavljanja vaše nove [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] instalacije - postavite vašu lokaciju, vremensku zonu i povežite se na Internet.[CR][CR]Ove postavke se mogu promijeniti kasnije navigacijom u Programi > [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Postavke.[CR][CR]Za početak vašeg [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] iskustva, odaberite vaše regionalne postavke i raspored tipkovnice, zatim kliknite Slijedeće."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "Slijedeće"
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "Za lakšu identifikaciju na mreži, vaše novo [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] računalo treba naziv.[CR][CR]Pokušajte odabrati nešto značajno - poput sobe u kojoj se nalazite - stoga ćete znati koji je naziv kada ga vidite na mreži.[CR][CR]Taj naziv se koristi kada podešavate mrežne usluge, poput dijeljenja datoteka pomoću Sambe."
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Umrežavanje"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "Kako bi preuzeli pozadine, transparente i minijature za vaše filmove i TV serije i za streamanje online sadržaja sa stranica poput YouTuba, [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] trebate biti povezani na Internet.[CR][CR]An Internet veza je isto tako potrebna [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] za automatsko ažuriranje."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -856,14 +792,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Dijeljenje i udaljen pristup"
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] isto tako podržava SSH za udaljen pristup. Ovo je za napredne korisnike koji žele komunicirati s [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s osnovnim operativnim sustavom. Zadani korisnik je [COLOR blue]root[/COLOR] i zadana lozinka je [COLOR blue]openelec.[/COLOR]"
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "Kako bi dijelili datoteke između svojih računala [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] morate uključiti Samba poslužitelja. Taj Samba poslužitelj se može integrirati u vašu lokalnu mrežu pristupanjem sličnim poput Findera ili Windows Explorera."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "omogućeno"
@@ -879,10 +807,6 @@ msgstr "Podesite usluge:"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Hvala Vam"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "Vaša [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] instalacija je sada završena i ući ćete u Kodi gdje možete postaviti vaše medijske zbirke. Ako vam je potrebna pomoć, postoje korisničke upute na wiki.xbmc.org[CR][CR][COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] je razvio posvečeni tim razvijatelja koji su predano radili u svoje slobodno vrijeme. Čak i kao dobrovoljan projekt, moramo platiti našu Internet vezu i razvojne resurse stoga ako vam je [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] koristan, uvijek ćemo cijeniti donaciju bilo kojeg iznosa.[CR][CR]Napakon, nadamo se da ste uživali koristeći [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] isto tako kao i mi što uživamo razvijati ga. Ako trebate bilo kakvu pomoć, možete pronaći poveznice za dobivanje pomoći sa najnovijim openelec.tv novostima"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -907,10 +831,6 @@ msgstr "Vrati na zadano"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Vrati postavke sustava na zadano"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Vrati OpenELEC na zadano"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1011,10 +931,6 @@ msgstr "Slijedeće informacije su pogrešne:"
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "Provjerite ažuriranja odmah:"
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
