--- a/language/Czech/strings.po
+++ b/language/Czech/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "Nastavení [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#601"
 msgid "Interface"
@@ -104,10 +100,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Konfigurace názvu OpenELEC systému. Tato adresa bude použita pro HTPC \\\\hostname v systému Windows a jméno SMB serveru v systému Mac OS Finder"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "Konfigurace rozložení 1. softwarové klávesnice"
@@ -120,25 +112,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Nakonfigurujte typ fyzické klávesnice"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC může být nakonfigurován pro automatické nebo ruční stažení aktualizace. Automatické aktualizace jsou k dispozici na stabilních verzích a kandidátů na stabilní verzi. Automatické aktualizace nebudou instalovat Beta verze"
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "Nastavte do polohy povolit, aby se  na obrazovce zobrazila informace o nové aktualizaci"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Klikněte pro manuální ověření dostupnosti nové aktualizace na serverech OpenELEC"
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Když máte malou LCD nebo VFD obrazovku pripojenou k systému OpenELEC, musíte nastavit správný ovladač obrazovky"
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "Nastavte na ON pro uspaní připojených diskových jednotek v přípaďe nečinnosti (netýká se hlavního systémového disku)"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -152,21 +128,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Vytvoří tar archiv, který obsahuje nastavení OpenELEC a Kodi, zálohu databáze a náhledů. Zálohy budou uložené v adresáři /storage/backups"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Obnovit z tar archivu, který byl v minulosti vytvořen použitím výše uvedené volby zálohování"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]SOFT RESET[/COLOR]\nTrvale resetovat konfiguraci OpenELEC OS na výchozí hodnoty (na výchozí hodnoty se resetuje také konfigurace Kodi včetně knihoven medií - hudba/video/atd.)"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]HARD RESET[/COLOR]\nTrvale resetovat konfiguraci OpenELEC OS a Kodi na výchozí hodnoty (veškerá data na diskových oddílech budou smazána)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -228,10 +192,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Nastavit heslo pro Samba sdílení."
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "Nastavte do polohy povolit, aby byl povolen integrovaný SSH server. SSH konzole je přístupná pod uživatelským jménem 'root' a heslem 'openelec'."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Nastavit do polohy povolit, pokud jste překopírovali osobní SSH klíč do svého HTPC a rádi byste zvýšili zabezpečení vypnutím SSH přihlášení pomocí uživatelského jména a hesla."
@@ -263,10 +223,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "Pomocí protokolu OBEX je možno posílat přes bluetooth do OpenELEC soubory jako jsou např. filmy nebo obrázky ."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -660,10 +616,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "Aktualizace k dispozici"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "Chcete aktualizovat OpenELEC nyní?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "Název souboru"
@@ -808,33 +760,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "Automatické sdílení externích disků"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Vítejte v [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELECu[/COLOR]"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Vítejte"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Tento průvodce vás provede krok za krokem procesem nastavení nové instalace [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] - jedná se místní nastavení, časové pásmo, připojení k internetu. [CR][CR]Tato nastavení mohou být později změněna v nabídce Programy> [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Nastavení. [CR][CR]Než začnete s [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR], vyberte místní nastavení a rozložení klávesnice a následovně stiskněte další."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "Další"
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "Pro jednoduší identifikaci nového [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] zařízení je nutný název. .[CR][CR]Zkuste si vybrat něco smysluplného např. v jakém pokoji se zařízení nachází. Okamžitě tak budete vědět o jaké zařízení se v síti jedná. [CR][CR] Tento název je použit pro nastavení síťových služeb jako je sdílení pomocí samby."
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Síť"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "Aby bylo možné stáhnout pozadí, banery a náhledy pro filmy, TV seriály a pro online sledování obsahu ze stránek jako je Yotube, je nutné, aby byl [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] připojen k internetu. [CR][CR] Internetové připojení je také nutné pro automatické aktualizace systému [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]. "
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -856,14 +792,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Sdílení a vzdálený přistup"
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] také podporuje vzdálený přístup pomocí SSH. Tato možnost je pro pokročilé uživatelé, kteří chtějí komunikovat s jádrem systému  [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]. Výchozí uživatelské jméno je [COLOR blue]root[/COLOR] a výchozí heslo je [COLOR blue]openelec.[/COLOR]"
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "Aby bylo možné sdílet soubory mezi počítačem a [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] zařízením, jsou k dispozici sdílené složky pomocí protokolu samba. Pro přístup ke sdílením složkám je možno jednoduše použít v lokální síti aplikace Finder nebo Windows Explorer."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "aktivováno"
@@ -879,10 +807,6 @@ msgstr "Konfigurace služby:"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Děkuji"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "Instalace systému [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] je nyní kompletní a nyní můžete v Kodi nastavit své knihovny medií. Návod jak na to je k dispozici na stránkách wiki.xbmc.org. Systém [CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] je vyvinut specializovaným týmem vývojářů, kteří pracují výhradně ve svém volném čase. Jako dobrovolníci pracující na projektu si stále platíme naše internetové připojení a vývojářské nástroje, takže jestli shledáte systém [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] užitečným, vždy oceníme jakýkoliv příspěvek. [CR][CR]Koneckonců věříme, že si používání systému  [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] užíváte stejně tak, jak my si užíváme vývoj tohoto systému. Pokud budete potřebovat jakoukoli pomoc, můžete najít odkazy na pomoc spolu s nejnovějšími zprávami na adrese openelec.tv"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -907,10 +831,6 @@ msgstr "Resetovat do továrního nastavení"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Resetovat nastavení systému do továrního nastavení"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Resetovat OpenELEC do továrního nastavení"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1011,10 +931,6 @@ msgstr "Následující informace jsou neplatné:"
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "Vyhledat aktualizace nyní:"
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
