--- a/language/Finnish/strings.po
+++ b/language/Finnish/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fi\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Asetukset"
 
 msgctxt "#601"
 msgid "Interface"
@@ -100,10 +96,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Muokkaa OpenELEC-järjestelmäsi verkkonimeä. Nimeä käytetään Windowsissa \\\\verkkonimi ja SMB-palvelimen nimenä Mac OS Finderissa"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "Määrittele ensimmäisen näppäimistön ulkoasu"
@@ -116,25 +108,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Aseta varsinaisen näppäimistön tyyppi"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC voidaan asettaa päivittymään automaattisesti tai manuaalisesti. Automaattiset päivitykset ovat saatavilla vakaisiin julkaisuihin. Automaattiset päivitykset on oletuksena estetty beta- ja kehitysversioissa"
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "Kun tämä asetus on valittuna, ruudulla näytetään ilmoitus kun uusi päivitys on saatavilla"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Klikkaa hakeaksesi päivitykset käsin OpenELEC-palvelimilta"
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Jos sinulla on pieni LCD- tai VFD-näyttö, sinun pitää muokata näytön ajurien asetukset"
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "Kun tämä asetus on valittuna, OpenELEC sammuttaa liitetyt kovalevyt (ei kuitenkaan käyttöjärjestelmän levyä), kun levyt eivät ole käytössä"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -148,21 +124,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Luo tar-paketin, joka sisältää kaikki OpenELEC- ja Kodi-asetukset, tietokannat ja thumbnail-kuvat. Varmuuskopiot siirretään /storage/backups -kansioon"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Palauta varmuuskopio tar-paketista käyttäen yllä olevaa varmuuskopiovaihtoehtoa"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]OLETUSASETUKSET[/COLOR][CR]\nPalauttaa pysyvästi OpenELEC-oletusasetukset (palauttaa myös Kodi:n oletusasetukset mukaan lukien kirjastosi säilyttäen kuitenkin tallennetut musiikki-, video- ja muut mediatiedostot) "
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]NOLLAUS[/COLOR][CR]\nPysyvästi palauttaa OpenELEC- sekä Kodi-oletusasetukset sekä poistaa kaikki OpenELEC-koneeseesi tallennetut tiedostot."
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -224,10 +188,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Aseta salasana Samba-palvelua varten"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "Valitse tämä asetus käyttääksesi SSH-palvelinta. SSH-yhteyden saa avattua käyttäjätunnuksella 'root' ja salasanalla 'openelec'."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Valitse tämä asetus jos käytät SSH-avaimia. SSH-avaimilla saa parannettua tietoturvaa ja niiden avulla voi välttää käyttäjätunnus- ja salasanapohjaisen autentikoinnin."
@@ -259,10 +219,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "OBEX-tiedostonsiirrolla voi lähettää tiedostoja OpenELECiin bluetoothilla, esimerkiksi elokuvia tai valokuvia."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -656,10 +612,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "Päivitys saatavilla"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "Haluatko päivittää OpenELEC-järjestelmän nyt?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "Tiedostonimi"
@@ -804,33 +756,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "Ulkoisten asemien automaattinen jakaminen"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Tervetuloa. Toivottaa [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Tervetuloa"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Tässä osiossa viimeistellään uusi [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-asennuksesi. Määritellään sijaintisi, aikavyöhykkeesi ja yhdistetään sinut internetiin.[CR][CR]Näitä asetuksia voit muokata myöhemmin osiosta > Ohjelmat > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-asetukset.[CR][CR]Aloittaaksesi [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-kokemuksesi, valitse alueelliset asetukset ja näppäimistön tyyppi. Lopuksi klikkaa 'Seuraava'."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "Seuraava"
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "Jotta koneesi erottuisi verkossa helposti, uusi [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-asennuksesi tarvitsee verkkonimen.[CR][CR]Valitse nimeksi jotain kuvaavaa, jotta tunnistat sen helposti kun näet nimen verkossa.[CR][CR]Nimeä käytetään käytettäessä verkkopalveluita kuten Samba."
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Verkkoyhteydet"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "Jotta mediakoneesi pystyisi lataamaan julisteita ja thumbnaileja elokuviisi, ja videoiden suoratoisto esim. Youtubesta onnistuisi, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] täytyy olla yhdistetty Internetiin.[CR][CR]Internet-yhteys vaaditaan myös, jotta [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] voi automaattisesti päivittää itsensä."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -852,14 +788,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Jakaminen ja etäyhteys"
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] tukee myös SSH-etäyhteyttä. Tämä on tarkoitettu edistyneille käyttäjille, jotka haluavat yhteyden [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-järjestelmän alla toimivaan käyttöjärjestelmään. Oletuskäyttäjätunnus on [COLOR blue]root[/COLOR] ja oletussalasana on [COLOR blue]openelec[/COLOR]."
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "Jotta pystyisit jakamaan tiedostoja koneidesi välillä [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] sisältää Samba-palvelun. Samba-palvelulla saadaan yhteys kotiverkkoosi, jonka jälkeen voit käyttää sitä tuttuun tapaan Windows Explorerillä tai Finderillä."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "käytössä"
@@ -875,10 +803,6 @@ msgstr "Määrittele palveluita:"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Kiitos"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-asennuksesi on nyt valmis ja voit käynnistää Kodi:n, jossa voit rakentaa mediakirjastosi. Löydät apuja mediakirjaston rakentamiseen täältä: wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] on kehitetty täysin vapaaehtoisvoimin. Tästä huolimatta tarvitsemme tukea maksaaksemme verkkoliikennemaksumme ja kehitysympäristömme, joten jos koet [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-projektin hyödylliseksi, olemme kiitollisia jokaisesta lahjoituksesta.[CR][CR]Toivomme että nautit [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-järjestelmän käytöstä yhtä paljon kuin me nautimme sen rakentamisesta. Jos tarvitset apua, löydät hyödyllisiä linkkejä ja uutisia osoitteesta openelec.tv"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -903,10 +827,6 @@ msgstr "Palauta oletusasetukset"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Palauta järjestelmän oletusasetukset"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Palauta OpenELEC-oletusasetukset"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1007,10 +927,6 @@ msgstr "Seuraavat tiedot ovat virheellisiä:"
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "Tarkista päivitykset nyt:"
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
