--- a/language/French/strings.po
+++ b/language/French/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -17,8 +17,8 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "Paramètres d'[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
+msgid "@DISTRONAME@ Settings"
+msgstr "Paramètres @DISTRONAME@"
 
 msgctxt "#601"
 msgid "Interface"
@@ -105,8 +105,8 @@ msgid "709"
 msgstr "709"
 
 msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Configurer le nom d'hôte de votre système OpenELEC. Celui-ci sera utilisé comme \\\\nom à partir de Windows et comme nom de serveur SMB dans le Finder Mac OS"
+msgid "Configure the Hostname of your @DISTRONAME@ system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
+msgstr "Configurer le nom d'hôte de votre système @DISTRONAME@. Celui-ci sera utilisé comme \\\\nom à partir de Windows et comme nom de serveur SMB dans le Finder Mac OS"
 
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
@@ -121,24 +121,24 @@ msgid "Configure the physical keyboard type"
 msgstr "Configurer le type physique de clavier"
 
 msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC peut être configuré pour être mis à jour manuellement ou automatiquement. Les mises à jours automatiques sont disponibles pour les versions stables et les release candidates. La mise à jour automatique est désactivée pour les versions de test et les versions de développement"
+msgid "@DISTRONAME@ can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
+msgstr "@DISTRONAME@ peut être configuré pour être mis à jour manuellement ou automatiquement. Les mises à jours automatiques sont disponibles pour les versions stables et release candidates. La mise à jour automatique est désactivée pour les versions de test et les versions de développement"
 
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "Activer pour afficher une notification quand une nouvelle version est disponible"
 
 msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Cliquer pour vérifier si une nouvelle version d'OpenELEC est disponible"
+msgid "Click to manually check the @DISTRONAME@ servers for an updated release"
+msgstr "Cliquer pour vérifier si une nouvelle version @DISTRONAME@ est disponible"
 
 msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Si vous avez un petit LCD ou VFD relié à votre système OpenELEC, vous devez configurer le bon pilote d'affichage"
+msgid "If you have an small LCD or VFD attached to your @DISTRONAME@ system you must configure the correct display driver"
+msgstr "Si vous avez un petit LCD ou VFD relié à votre système @DISTRONAME@, vous devez configurer le bon pilote d'affichage"
 
 msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "Activer pour qu'OpenELEC mette les disques connectés en veille (mais pas le disque système) pendant les périodes d'inactivité"
+msgid "Set on ON and @DISTRONAME@ will spin down attached drives (not the main system drive) when idle"
+msgstr "Activer pour que @DISTRONAME@ mette les disques connectés en veille (mais pas le disque système) pendant les périodes d'inactivité"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -153,20 +153,12 @@ msgid "721"
 msgstr "721"
 
 msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Créer une archive tar contenant les paramètres de configuration, les bases de données et les images pour OpenELEC et Kodi. Les fichiers de sauvegarde seront stockés dans /storage/backups"
+msgid "Create a tar archive containing all @DISTRONAME@ and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
+msgstr "Créer une archive tar contenant les paramètres de configuration, les bases de données et les images pour @DISTRONAME@ et Kodi. Les fichiers de sauvegarde seront stockés dans /storage/backups"
 
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Restaurer une archive tar précédemment créée en utilisant l'option de sauvegarde"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]RAZ LEGER[/COLOR]⏎\nRestaure les paramètres par défaut de configuration d'OpenELEC SE (restaure aussi les paramètres par défaut d'Kodi incluant vos bibliothèques. Vos médias - musique/vidéos/etc ne sont pas touchées)"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]RAZ LOURD[/COLOR]⏎\nRestauration de la configuration par défaut d'OpenELEC SE et d'Kodi (toutes les données dans votre espace de stockage seront perdues)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -229,8 +221,8 @@ msgid "Set the password for Samba sharing"
 msgstr "Configurer le mot de passe pour le partage Samba"
 
 msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "Activer l'accès SSH. La console SSH sera accessible avec l'identifiant 'root' et le mot de passe 'openelec'."
+msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password '@ROOT_PASSWORD@'."
+msgstr "Activer l'accès SSH. La console SSH sera accessible avec l'identifiant 'root' et le mot de passe '@ROOT_PASSWORD@'."
 
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
@@ -265,8 +257,8 @@ msgid "750"
 msgstr "750"
 
 msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "Vous pouvez envoyer des fichiers en Bluetooth à OpenELEC avec le système OBEX, comme des films ou des images."
+msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to @DISTRONAME@."
+msgstr "Vous pouvez envoyer des fichiers en Bluetooth à @DISTRONAME@ avec le système OBEX, comme des films ou des images."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -661,8 +653,8 @@ msgid "Update Available"
 msgstr "Mise à jour disponible"
 
 msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "Voulez mettre OpenELEC à jour ?"
+msgid "Would you like to update @DISTRONAME@ now?"
+msgstr "Voulez-vous mettre @DISTRONAME@ à jour ?"
 
 msgctxt "#32181"
 msgid "Filename"
@@ -809,32 +801,32 @@ msgid "Auto-Share External Drives"
 msgstr "Partage automatique des lecteurs externes"
 
 msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Bienvenue sur [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
+msgid "Welcome to @DISTRONAME@"
+msgstr "Bienvenu sur @DISTRONAME@"
 
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Bienvenue"
 
 msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Cet assistant va vous guider durant l'installation de votre nouvel [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] pour configurer votre emplacement, fuseau horaire et vous permettre de vous connecter à internet.[CR][CR]Ces paramètres peuvent être changés ultérieurement en allant dans Programmes > Paramètres  [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR].[CR][CR]Pour commencer votre expérience [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR], choisissez vos paramètres régionaux, l'agencement de votre clavier et cliquez sur Suivant."
+msgid "This wizard will guide you through the process of setting up your new @DISTRONAME@ installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > @DISTRONAME@ Settings.[CR][CR]To begin your @DISTRONAME@ experience, select your regional settings and your keyboard layout, then click Next."
+msgstr "Cet assistant va vous guider durant la nouvelle installation de votre @DISTRONAME@ pour configurer votre emplacement, fuseau horaire et vous permettre de vous connecter à internet.[CR][CR]Ces paramètres peuvent être changés ultérieurement en allant dans Programmes > Paramètres @DISTRONAME@.[CR][CR]Pour commencer votre expérience @DISTRONAME@, choisissez vos paramètres régionaux, l'agencement de votre clavier et cliquez sur Suivant."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "Suivant"
 
 msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "Afin d'être facilement identifiable sur le réseau, votre nouvelle machine [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] a besoin d'un nom.[CR][CR]Essayez de choisir un nom significatif - comme le nom de la pièce - pour bien l'identifier.[CR][CR]Ce nom est utilisé pour la configuration des services réseau, comme le partage de fichiers Samba."
+msgid "To be identified easily on the network, your new @DISTRONAME@ machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
+msgstr "Afin d'être facilement identifiable sur le réseau, votre nouvelle machine @DISTRONAME@ a besoin d'un nom.[CR][CR]Essayez de choisir un nom significatif - comme le nom de la pièce - pour bien l'identifier.[CR][CR]Ce nom est utilisé pour la configuration des services réseau, comme le partage de fichiers Samba."
 
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Réseau"
 
 msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] a besoin d'être connecté à internet pour télécharger les fanarts, les bannières et les posters pour vos films et vos séries TV, ou pour accéder aux contenus en ligne tels que YouTube.[CR][CR]Une connexion à internet est également nécessaire pour les mises à jours automatiques d'[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]."
+msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, @DISTRONAME@ needs to be connected the Internet.[CR][CR]An Internet connection is also required for @DISTRONAME@ to automatically update itself."
+msgstr "@DISTRONAME@ a besoin d'être connecté à internet pour télécharger les fanarts, les bannières et les posters pour vos films et vos séries TV, ou pour accéder aux contenus en ligne tels que YouTube.[CR][CR]Une connexion à internet est également nécessaire pour les mises à jours automatiques de  @DISTRONAME@."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -857,12 +849,12 @@ msgid "Sharing and Remote Access"
 msgstr "Partage et accès distant"
 
 msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] permet l'accès distant par SSH. Cet accès est destiné aux utilisateurs avancés qui souhaitent interagir avec le système sous-jacent d'[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]. L'utilisateur par défaut est [COLOR blue]root[/COLOR] et le mot de passe par defaut est [COLOR blue]openelec.[/COLOR]"
+msgid "@DISTRONAME@ also supports SSH for remote access. This is for advanced users who wish to interact with @DISTRONAME@'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]@ROOT_PASSWORD@[/COLOR]."
+msgstr "@DISTRONAME@ permet l'accès distant par SSH. Cet accès est destiné aux utilisateurs avancés qui souhaitent interagir avec le système sous-jacent de @DISTRONAME@. L'utilisateur par défaut est [COLOR blue]root[/COLOR] et le mot de passe par defaut est [COLOR blue]@ROOT_PASSWORD@.[/COLOR]"
 
 msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "Pour partager les fichiers entre vos ordinateurs, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] embarque un serveur Samba. Ce serveur Samba peut être intégré dans votre réseau local pour un accès facile à partir du Finder de MacOS ou de l'explorateur de Windows."
+msgid "In order to share your files between your computers @DISTRONAME@ has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
+msgstr "Pour partager les fichiers entre vos ordinateurs, @DISTRONAME@ embarque un serveur Samba. Ce serveur Samba peut être intégré dans votre réseau local pour un accès facile à partir du Finder de MacOS ou de l'explorateur de Windows."
 
 msgctxt "#32314"
 msgid "enabled"
@@ -881,8 +873,8 @@ msgid "Thank you"
 msgstr "Merci"
 
 msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "Votre installation d'[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] est terminée. Vous allez maintenant accéder à Kodi où vous pourrez configurer votre bibliothèque multimédia. Un guide est disponible pour vous aider sur wiki.xbmc.org.[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] est développé par une équipe dévouée qui travaille exclusivement sur son temps libre. Malgré cela, nous avons besoin de payer la bande passante et les ressources pour le développement. Si vous trouvez [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] utile, n'hésitez pas un faire un don, quelque soit le montant.[CR][CR]Nous espérons que vous aimerez utiliser [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] autant que nous aimons le créer. Si vous avez besoin de plus d'aide, vous pouvez utiliser les liens où vous trouverez de l'aide ainsi que les dernières actualités sur openelec.tv"
+msgid "Your @DISTRONAME@ installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.kodi.tv[CR][CR]@DISTRONAME@ is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find @DISTRONAME@ useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using @DISTRONAME@ as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at our website"
+msgstr "Votre installation @DISTRONAME@ est terminée. Vous allez maintenant accéder à Kodi où vous pourrez configurer votre bibliothèque multimédia. Un guide est disponible pour vous aider sur wiki.kodi.tv.[CR][CR]@DISTRONAME@ est développé par une équipe dévouée qui travaille exclusivement sur son temps libre. Malgré cela, nous avons besoin de payer la bande passante et les ressources pour le développement. Si vous trouvez @DISTRONAME@ utile, n'hésitez pas un faire un don, quelque soit le montant.[CR][CR]Nous espérons que vous aimerez utiliser @DISTRONAME@ autant que nous aimons le créer. Si vous avez besoin de plus d'aide, vous pouvez utiliser les liens où vous trouverez de l'aide ainsi que les dernières actualités sur notre site Internet"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -909,8 +901,8 @@ msgid "Reset System Settings to defaults"
 msgstr "Restaurer les paramètres système par défaut"
 
 msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Réinitialiser OpenELEC"
+msgid "Reset @DISTRONAME@ to defaults"
+msgstr "Réinitialiser @DISTRONAME@ à ses valeurs par défaut"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1013,8 +1005,8 @@ msgid "Check for updates now:"
 msgstr "Vérifier les mises à jours:"
 
 msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
+msgid "@DISTRONAME@"
+msgstr "@DISTRONAME@"
 
 msgctxt "#32364"
 msgid "Update available"
