--- a/language/Hebrew/strings.po
+++ b/language/Hebrew/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: he\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] הגדרות "
 
 msgctxt "#601"
 msgid "Interface"
@@ -100,10 +96,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "הגדר שם מחשב (hostname) של מערכת OpenELEC. שם זה ישמש כתובת hostname\\\\ בסייר הקבצים בחלונות ושם שרת SMB ב-Mac OS Finder"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "הגדר מערך מקלדת מס' 1"
@@ -116,25 +108,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "הגדר סוג מקלדת פיזית"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC ניתנת להגדרה כך שעדכונים יוחלו באופן אוטומטי או ידנית. עדכונים אוטומטים זמינים לגרסאות יציבות ו-RC. העדכונים האוטומטים מבוטלים בגרסאות ביטא ופיתוח"
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "סמן כפעיל לשם הצגת תיבת דו-שיח עם הודעה מתאימה כאשר עדכון חדש זמין"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "לחץ לבדיקה בשרתי OpenELEC האם קיימת גרסה מעודכנת"
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "אם ברשותך מודול LCD או VFD קטן המחובר למערכת OpenELEC שלך חובה להגדיר את מנהל ההתקן הנכון"
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "סמן כפעיל לשם האטת מהירות סיבוב כונננים מחוברים (לא כונן המערכת) כאשר המערכת בבטלה"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -148,21 +124,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "צור קובץ ארכיב מסוג tar המכיל כל תוכן הגדרות המערכת, מסדי נתונים ותמונות ממוזערות של OpenELEC ו-Kodi. קבצי הגיבוי יאוחסנו בנתיב storage/backups/"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "שחזר ארכיב גיבוי tar הנוצר בעבר בעזרת אפשרות הגיבוי שלעיל"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]איפוס חלקי[/COLOR]\nאפס לצמיתות הגדרות מערכת OpenELEC לברירת המחדל (מאפס גם את Kodi לברירת המחדל כולל הספריה. לא מתבצע שינוי במדיה המאוחסנת - מוזיקה/וידאו/וכו')"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]איפוס מלא[/COLOR]\nאפס לצמיתות הגדרות מערכת OpenELEC ו-Kodi לברירת המחדל (כל המדיה המאוחסנת במחיצת Storage תימחק)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -224,10 +188,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "הגדר את הסיסמה לשיתוף Samba"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "סמן כפעיל לשם הפעלת שרת ה-SSH המובנה. ניתן לגשת לטרמינל SSH עם שם המשתמש 'root' והסיסמה 'openelec'."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "סמן כפעיל אם העתקת מפתחות SSH פרטיים למערכת וברצונך לבטל אימות SSH באמצעות שם משתמש וסיסמה לשם שיפור האבטחה."
@@ -259,10 +219,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "בעזרת תקשורת נתוני OBEX ניתן לשלוח קבצים, כמו סרטים או תמונות, דרך Bluetooth ל-OpenELEC."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -656,10 +612,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "עדכון זמין"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "האם ברצונך לעדכן את OpenELEC כעת?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "שם קובץ"
@@ -804,33 +756,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "שתף אוטומטית כונן חיצוני"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] ברוך הבא ל "
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "ברוך הבא"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "אשף זה ינחה אותך בתהליך הגדרת מערכת OpenELEC החדשה שלך - קביעת הגדרות מיקום, אזור זמן וחיבור לרשת האינטרנט.[CR][CR]הגדרות אלה ניתנות לשינוי מאוחר יותר בניווט אל תכניות > הגדרות OpenELEC.[CR][CR]להתחלת חווית OpenELEC שלך, בחר את ההגדרות האזוריות ומערך המקלדת שלך, ולחץ על הבא."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "הבא"
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "לזיהוי באופן פשוט ברשת המקומית, מערכת OpenELEC החדשה שלך זקוקה לשם.[CR][CR]השתדל לבחור שם בעל משמעות - כמו שם החדר בו המערכת ממוקמת - כך שתוכל לזהות אותה בעת שתראה שם זה ברשת המקומית שלך.[CR][CR]השם ישמש להגדרת שירותי רשת, כמו שיתוף קבצים דרך Samba."
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "רשת"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "להורדת תמונות רקע, באנרים ותמונות ממוזערות עבור הסרטים והסדרות שלך ולהזרים תוכן מקוון מאתרים כמו YouTube, מערכת OpenELEC דורשת חיבור לרשת האינטרנט.[CR][CR]חיבור זה נדרש גם לשם עדכון מערכת OpenELEC באופן אוטומטי."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -852,14 +788,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "שיתוף וגישה מרחוק"
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "מערכת OpenELEC תומכת גם ב-SSH לגישה מרחוק. מיועד עבור משתמשים מתקדמים הרוצים לפנות ישירות למערכת ההפעלה של OpenELEC. משתמש ברירת המחדל הוא root וסיסמתו היא openelec."
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "לשיתוף קבצים בין מחשביך OpenELEC כוללת שרת Samba. שרת זה יכול להשתלב ברשת המקומית שלך וניתן לגשת אליו בדרך מוכרת בעזרת סייר הקבצים בחלונות ובעזרת Mac OS Finder."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "פעיל"
@@ -875,10 +803,6 @@ msgstr "הגדר שירותים:"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "תודה רבה"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "התקנת OpenELEC הסתיימה ועתה תיכנס ל-Kodi בה תוכל להגדיר ספריות המדיה שלך. לעזרה בכך קיים מדריך הזמין ב-wiki.xbmc.org.[CR]OpenELEC מפותחת על ידי צוות מפתחים מסור העובדים על הפרויקט בזמנם הפנוי. גם בתור פרויקט התנדבותי, אנו עדיין חייבים לשלם עבור תעבורת האינטרנט ומשאבי הפיתוח לכן אם לדעתך OpenELEC שימושית, אנא שקול בחיוב שליחת תרומה, אנו נוקיר כל סכום שיתרם.[CR][CR]לסיום, כולנו תקווה כי אתה נהנה להשתמש ב-OpenELEC לפחות כמו שאנו נהנים לפתח אותה. לעזרה נוספת, ניתן למצוא קישורים כיצד לקבל עזרה ועדכוני חדשות ב-openelec.tv"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -903,10 +827,6 @@ msgstr "אפס לברירת מחדל"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "אפס הגדרות מערכת לברירת מחדל"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "אפס OpenELEC לברירת המחדל"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1007,10 +927,6 @@ msgstr "הפרטים הבאים שגוים:"
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "חפש עדכונים כעת:"
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
