--- a/language/Hungarian/strings.po
+++ b/language/Hungarian/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: hu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Megnyitja a[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Beállításokat"
 
 msgctxt "#601"
 msgid "Interface"
@@ -104,10 +100,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "A OpenELEC rendszer hosztneve. Ez használatos mint a HTPC \\\\számítógépnév Windowsban és az SMB szerver név a Mac OS Keresőben"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "1. billentyűzetkiosztás beállítása"
@@ -120,25 +112,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Billentyűzet fizikai típus beállítása"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC beállítható automatikus vagy kézi frissítésre. Az automatikus frissítés a végleges változatok esetén elérhető. Az automtikus frissítés lehetősége a a béta és a fejlesztői változatokban letiltásra kerül."
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "ON állásban a képernyőn megjelenik egy figyelmeztetés ha újabb változat érhető el"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Kattintásra frissebb változat keresése az OpenELEC szervereken."
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Ha Önnek kisméretű LCD vagy VFD kijelző van csatlakoztatva az OpenELEC rendszerhez akkor be kell állítsa megfelelő kijelző meghajtóprogramot."
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "On beállítás esetén az OpenELEC leállítja a csatlakoztatott (de a rendszerlemezt nem) merevlemezeket"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -152,21 +128,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Generál egy tar állományt minden OpenELEC és Kodi konfigurációs beállításokkal, adatbázisokkal és bélyegképekkel. a mentés fájljai a /storage/backups mappába kerülnek."
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Tar állomány visszaállítása ami az előző opció használatával készült."
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]SOFT RESET[/COLOR]\nAz OpenELEC OS konfigurációjának alapra állítása (szintén alaphelyzetbe állítja az Kodi-t a médiatárral együtt. A médiafájlok - zene/videók/stb érintetlen marad)"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]HARD RESET[/COLOR]\nAz OpenELEC OS és Kodi konfigurációjának alaphelyzetbe állítása (a rendszerpartíción minden adat törlésre kerül)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -228,10 +192,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "A Samba megosztás jelszava"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "ON állásban a a beépített SSH szerver elérhetővé válik. Az SSH konzol elérhető a 'root' felhasználói névvel és 'openelec' jelszóval."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Állítsa ON állsába ha privát SSH kulcsot másolt a HTPC-re és ezzel fokozza a biztonságot SSH felhasználói név és jelszó megadása helyett."
@@ -263,10 +223,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "Az OBEX fájlátvitellel küldhet fájlokat, például filmeket vagy képeket Bluetooth-on keresztül az OpenELEC-re."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -660,10 +616,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "Frissítés elérhető"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "Akarod frissíteni az OpenELEC-et ?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "Fájlnév"
@@ -808,33 +760,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "Külső Megható automatikus megosztása"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Üdvözli az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Üdvözlet"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Ez a varázsló végigvezet az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] telepítésén - beállítva a helyet, időzónát, és az internet csatlakozást.[CR][CR]Ezek a beállítások később meváltoztathatóak a Programok > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Beállításoknál.[CR][CR]Az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] kezdéséhez adja meg a régió beállításokat, aztán kattintson a 'Következő' gombra."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "Következő"
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "A hálózaton való könnyű azonosíthatósághoz az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] gépnek név megadása szükséges.[CR][CR]Érdemes valami jellemező nevet választani - pl. melyik szobában található - amiből látható hoy melyik gépről van szó.[CR][CR]Ez a név kerül használatra a hálózati szolgáltatásokban is, mint a Samba."
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Hálózatkezelés"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "Ahhoz hogy háttér-információk, bannerek, bélyegképek legyenek letöltve a filmekez és sorozatokhoz, és olyan online szolgáltatásokat használhass mint pl. a YouTube, az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] internethez való kapcsolódása szükséges. [CR][CR]Szintén internet kapcsolat szükséges az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] automatikus frissítéséhez."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -856,14 +792,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Megosztás és Távoli Elérés"
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "Az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] támogatja az SSH távoli elérést. Ez azon haladó felhasználók számára hasznos akik az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] alatt futó operációs rendszer közvetlen elérését igénylik. Az alapértelmezett felhasználónév [COLOR blue]root[/COLOR] és az alapértlemezett jelszó [COLOR blue]openelec.[/COLOR]"
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "A fájlok számítógépek közötti megosztásáhozaz  [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] beépített samba szervert tartalmaz. Ez a samba szerver a helyi hálózatba integrálódik és kényelmesen elérhető akár a Windows Intézővel is."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "engedélyezve"
@@ -879,10 +807,6 @@ msgstr "Szolgáltatások beállítása:"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Köszönöm"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "Az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] telepítése befejeződött és most elindul az Kodi ahol beállíthatja a médiatárát. Ehhez segítséget talál a wiki.xbmc.org címen.[CR][CR]Az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] fejlesztését egy dedikált csapat végzi akik a szabad idejüket áldozzák erre a feladatra. Mégha ez egy önkéntes projekt is, az internetes sávszélesség használat és a fejlesztői eszközök költséget generálnak ezért ha az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] hasznos az Ön számára, bármekkora adományért hálásak vagyunk.[CR][CR]Végül, reméljük annyira élvezi az [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] használatát, mint amennyire mi élvezzük a készítését. Ha további segítségre van szüksége, hasznos linkeket találhat az openelec.tv weboldalon."
 
 msgctxt "#32319"
 msgid "Cron"
@@ -907,10 +831,6 @@ msgstr "Alapértelmezett állapot visszaállítása"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Rendszerbeállítások visszaállítása"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Az OpenELEC beállításaink visszaállítása"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1011,10 +931,6 @@ msgstr "A következő Információk Érvénytelenek:"
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "Frissítések azonnali keresése:"
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
