--- a/language/Korean/strings.po
+++ b/language/Korean/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ko\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] 설정"
 
 msgctxt "#601"
 msgid "Interface"
@@ -144,6 +140,10 @@ msgctxt "#32191"
 msgid "Error"
 msgstr "오류"
 
+msgctxt "#32193"
+msgid "Service"
+msgstr "서비스"
+
 msgctxt "#32196"
 msgid "About"
 msgstr "About"
@@ -171,6 +171,10 @@ msgstr "외장 드라이브 자동 공유"
 msgctxt "#32303"
 msgid "Next"
 msgstr "다음"
+
+msgctxt "#32315"
+msgid "disabled"
+msgstr "사용 안 함"
 
 msgctxt "#32326"
 msgid "Are you sure?"
