--- a/language/Macedonian/strings.po
+++ b/language/Macedonian/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -16,6 +16,10 @@ msgstr ""
 "Language: mk\n"
 "Plural-Forms: nplurals=2; plural=(n % 10 == 1 && n % 100 != 11) ? 0 : 1;\n"
 
+msgctxt "#602"
+msgid "Address"
+msgstr "Адреса"
+
 msgctxt "#603"
 msgid "Type"
 msgstr "Тип"
@@ -23,6 +27,10 @@ msgstr "Тип"
 msgctxt "#604"
 msgid "State"
 msgstr "Држава"
+
+msgctxt "#605"
+msgid "Address"
+msgstr "Адреса"
 
 msgctxt "#32000"
 msgid "Network"
@@ -112,6 +120,10 @@ msgctxt "#32326"
 msgid "Are you sure?"
 msgstr "Да ли сте сигурни?"
 
+msgctxt "#32332"
+msgid "Address"
+msgstr "Адреса"
+
 msgctxt "#32334"
 msgid "Yes"
 msgstr "Да"
@@ -119,6 +131,10 @@ msgstr "Да"
 msgctxt "#32335"
 msgid "No"
 msgstr "Не"
+
+msgctxt "#32364"
+msgid "Update available"
+msgstr "Достапно е ажурирање"
 
 msgctxt "#32382"
 msgid "Speed"
