--- a/language/Mongolian (Mongolia)/strings.po
+++ b/language/Mongolian (Mongolia)/strings.po
@@ -9,41 +9,53 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: Haitian (Haitian Creole) (http://www.transifex.com/projects/p/xbmc-addons/language/ht/)\n"
+"Language-Team: Mongolian (Mongolia) (http://www.transifex.com/projects/p/xbmc-addons/language/mn_MN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ht\n"
+"Language: mn_MN\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgctxt "#32001"
+msgid "Services"
+msgstr "Үйлчилгээ"
 
 msgctxt "#32106"
 msgid "Username"
-msgstr "nom itilizateur"
+msgstr "Хэрэглэгчийн нэр"
 
 msgctxt "#32140"
 msgid "Save"
-msgstr "Enregistre"
+msgstr "Хадгалах"
 
 msgctxt "#32141"
 msgid "Delete"
-msgstr "Efface"
+msgstr "Устгах"
+
+msgctxt "#32142"
+msgid "Refresh"
+msgstr "Сэргээх"
+
+msgctxt "#32191"
+msgid "Error"
+msgstr "Алдаа"
 
 msgctxt "#32212"
 msgid "Cancel"
-msgstr "Anule"
+msgstr "Цуцлах"
 
 msgctxt "#32303"
 msgid "Next"
-msgstr "Pwochen"
+msgstr "Дараах"
 
 msgctxt "#32334"
 msgid "Yes"
-msgstr "Non"
+msgstr "Тийм"
 
 msgctxt "#32335"
 msgid "No"
-msgstr "Wi"
+msgstr "Үгүй"
 
 msgctxt "#32382"
 msgid "Speed"
-msgstr "Vites"
+msgstr "Хурд"
