--- a/language/Norwegian/strings.po
+++ b/language/Norwegian/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: no\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-innstillinger"
 
 msgctxt "#601"
 msgid "Interface"
@@ -104,10 +100,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Konfigurer vertsnavnet for ditt OpenELEC-system. Dette navnet vil bli brukt for HTPC \\\\vertsnavn i Windows og SMB-tjenernavn i Mac OS Finder"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "Konfigurer utformingen for primærtastatur"
@@ -120,25 +112,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Konfigurer fysisk tastaturtype"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC kan bli konfigurert for automatisk eller manuell oppdatering. Automatiske oppdateringer er tilgjengelig for stabile versjoner og stabile versjonskandidater. Automatisk oppdatering blir deaktivert for beta- og utviklingsversjoner."
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "Skru til «PÅ» og en melding vil bli vist når en ny oppdateringer er tilgjengelig"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Klikk for å manuelt se etter en oppdatert versjon på OpenELEC-tjenerne"
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Hvis du har en liten LCD eller VFD tilkoblet ditt OpenELEC-system må du konfigurere den riktige skjermdriveren"
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "Skru til «PÅ» og OpenELEC vil i hvilemodus senke rotasjonshastigheten på tilkoblede disker (ikke systemdisken)"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -152,21 +128,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Opprett et TAR-arkiv som inneholder alle OpenELECs og Kodis konfigurasjonsinnstillinger, databaser og miniatyrer. Sikkerhetskopier vil bli lagret i /storage/backups"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Gjenopprett en sikkerhetskopi som er blitt opprettet tidligere ved å bruke alternativene ovenfor"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]Myk nullstilling[/COLOR]\nPermanent tilbakestilling til standard av OpenELEC kofigurasjonen (nullstiller også Kodi til standard samt dine biblioteker. Dine media som videoer, musikk og lignende røres ikke)"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]HARD RESET[/COLOR]\nTilbakestill permanent OpenELEC OS og Kodi konfigurasjonen til standard (alt på ditt lagringsmedium vil bli slettet)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -228,10 +192,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Fastsett passordet for Samba-deling"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "Skru til «PÅ» for å aktivere den innebygde SSH-tjeneren. Man kan få adgang til SSH-konsollen med brukernavnet «root» og passordet «openelec»."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Skru til «PÅ»hvis du har kopiert private SSH-nøkler til din HTPC og ønsker å forbedre sikkerheten ved å deaktivere SSH brukernavn- og passordautentisering."
@@ -263,10 +223,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "Med OBEX filoverføring kan du sende filer, som for eksempel filmer eller bilder over blåtann til OpenELEC."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -660,10 +616,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "Oppdatering tilgjengelig"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "Ønsker du å oppdatere OpenELEC nå?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "Filnavn"
@@ -808,33 +760,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "Del automatisk eksterne stasjoner"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Velkommen til [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Velkommen"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Denne veiledningen vil vise deg igjennom prosessen med å sette opp din nye installasjon av [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] - slik som plassering, tidssone og å koble til internett.[CR][CR]Disse innstillingene kan forandres senere ved å navigere til Programmer > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-innstillinger.[CR][CR]For å begynne din [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] opplevelse, velg dine regionale innstillinger og din tastaturutforming, klikk så Neste."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "Neste"
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "For å enkelt kunne indentifiseres på nettverket, trenger din nye [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]-maskin et navn.[CR][CR]Prøv å velge et meningsfylt ett - slik som rommet du befinner deg i - sånn at du vet hva det er når du ser det på nettverket.[CR][CR]Dette navnet brukes for å konfigurere nettverkstjenester, slik som fildeling ved bruk av Samba."
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Etablering av nettverk"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "For å kunne laste ned baktepper, bannere og miniatyrbilder til filmer og TV-serier, og for å kunne strømme nettinnhold fra sider som YouTube, må [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] være koblet til nettet. [CR][CR]En nettforbindelse er også nødvendig for at [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] skal kunne oppdatere seg selv."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -856,14 +792,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Deling og nettverkstilgang"
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] støtter også nettverkstilgang ved å benytte SSH. Dette er for erfarne brukere som ønsker å påvirke [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]s underliggende operativsystem. Standardbrukeren er [COLOR blue]root[/COLOR] og standardpassordet er [COLOR blue]openelec[/COLOR]."
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "For å kunne dele filene dine mellom datamaskinene dine har [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] inkludert en samba-tjener. Denne samba-tjeneren kan bli integrert i ditt lokale nettverk slik at du kan få tilgang til den gjennom Finder eller Windows Explorer."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "aktivert"
@@ -879,10 +807,6 @@ msgstr "Konfigurer tjenester:"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Takk"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "Installasjonen av [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] er ferdig og du vil nå gå inn i Kodi hvor du kan organisere mediebibliotekene dine. For å hjelpe deg med dette er en veiledning tilgjengelig på wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] blir laget av en gruppe dedikerte utviklere som kun jobber med prosjektet på fritiden. Selv om det er et dugnadsprosjekt, så må vi fortsatt betale for nettilgang, båndbredde og utviklingsressurser, så hvis du synes [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] er nyttig vil vi alltid sette stor pris på donasjoner av ethvert beløp.[CR][CR]Til slutt så håper vi at du setter pris på [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] like mye som vi setter pris på å lage det. Hvis du trenger mer hjelp, så kan kan du finne lenker som hjelper deg videre på openelec.tv"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -907,10 +831,6 @@ msgstr "Nullstill til standard"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Nullstill systeminnstillinger til standard"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Nullstill OpenELEC til standard"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1011,10 +931,6 @@ msgstr "Følgene informasjon er ugyldig:"
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "Se etter oppdateringer nå:"
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
