--- a/language/Polish/strings.po
+++ b/language/Polish/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -17,8 +17,8 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "Ustawienia [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
+msgid "@DISTRONAME@ Settings"
+msgstr "Ustawienia @DISTRONAME@"
 
 msgctxt "#601"
 msgid "Interface"
@@ -70,7 +70,7 @@ msgstr "Konfiguracja nazwy hosta, typu klawiatury, sposobu aktualizacji oraz two
 
 msgctxt "#701"
 msgid "Configure network startup options, NTP and VPNs"
-msgstr "Opcje uruchamiania sieci,  NTP i VPN"
+msgstr "Konfiguracja uruchamiania sieci,  NTP i VPN"
 
 msgctxt "#702"
 msgid "Manage the Ethernet, Wireless and VPN connections available to the system"
@@ -105,8 +105,8 @@ msgid "709"
 msgstr "709"
 
 msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Skonfiguruj nazwę hosta systemu OpenELEC. Będzie ona potrzebna do połączenia z systemu Windows i Mac OS."
+msgid "Configure the Hostname of your @DISTRONAME@ system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
+msgstr "Konfiguracja nazwy hosta systemu @DISTRONAME@. Nazwa ta będzie używana do uzyskania dostepu z poziomu systemu Windows \\\\nazwa_hosta"
 
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
@@ -121,24 +121,24 @@ msgid "Configure the physical keyboard type"
 msgstr "Skonfiguruj typ klawiatury fizycznej "
 
 msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC może zostać skonfigurowany tak, aby pobierał aktualizacje automatycznie lub manualnie. Aktualizacja automatyczna może pobierać wydania stabilne oraz wydania kandydujące. Aktualizacja automatyczna ignoruje wersje beta i wersje deweloperskie"
+msgid "@DISTRONAME@ can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
+msgstr "@DISTRONAME@ umożliwia wybranie sposobu instalowania aktualizacji - automatycznie lub manualnie. Aktualizacje automatyczne są dostępne dla wersji stabilnych lub kandydackich. Aktualizacje automatyczne są wyłączone dla wersji beta i deweloperskich."
 
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "Zaznacz, aby aktywować powiadomienia i dostępności nowej aktualizacji"
 
 msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Wciśnij, aby sprawdzić dostępne aktualizacje na serwerach OpenELEC"
+msgid "Click to manually check the @DISTRONAME@ servers for an updated release"
+msgstr "Naciśnij, aby sprawdzić czy na serwerach @DISTRONAME@ pojawiła się nowa aktualizacja"
 
 msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Jeśli do Twojego sytemu jest dołączony mały wyświetlacz LCD lub VFD, musisz wybrać odpowiedni do niego sterownik"
+msgid "If you have an small LCD or VFD attached to your @DISTRONAME@ system you must configure the correct display driver"
+msgstr "Jeśli posiadasz wyświetlacz LCD lub VFD w swoim systemie @DISTRONAME@ to, aby móc z niego korzystać, musisz wcześniej skonfigurować jego sterownik"
 
 msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "Zaznacz, aby aktywować funkcję wyłączania podłączonych dysków twardych podczas bezczynności (nie dotyczy dysku systemowego) "
+msgid "Set on ON and @DISTRONAME@ will spin down attached drives (not the main system drive) when idle"
+msgstr "Ustawienie tej opcji spowoduje, że system @DISTRONAME@ będzie parkował głowice dysków twardych (za wyjątkiem dysku systemowego) podczas bezczynności"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -152,21 +152,17 @@ msgctxt "#721"
 msgid "721"
 msgstr "721 "
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Tworzenie archiwum .tar zawierające wszystkie ustawienia OpenELEC i Kodi, bazy danych i grafik. Kopie zapasowe będą przechowywane w folderze: /storage/backups"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Przywracanie kopii zapasowej z archiwum .tar, poprzednio utworzonej za pomocą opcji tworzenia kopii zapasowej "
 
 msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]MIĘKKI RESET[/COLOR]⏎\nPrzywracanie domyślnej konfiguracji systemu OpenELEC (przywraca domyślną konfigurację Kodi włączając w to bibliotekę, przy czym twoje media pozostaną nietknięte)"
+msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset @DISTRONAME@ configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
+msgstr "[COLOR FF00FF00]MIĘKKI RESET[/COLOR]\nPrzywraca domyślne ustawienia konfiguracji @DISTRONAME@ (przywraca także domyślne ustawienia Kodi włączając w to bibliotekę mediów, przy czym pliki mediów pozostają nienaruszone)"
 
 msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]TWARDY RESET[/COLOR]⏎\nPrzywracanie domyślnej konfiguracji systemu OpenELEC i Kodi\n(zawartość partycji Storage zostanie usunięta)"
+msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset @DISTRONAME@ and Kodi configuration to defaults (everything in your storage partition will be deleted)"
+msgstr "[COLOR FFFF0000]TWARDY RESET[/COLOR]\nPrzywraca domyślne ustawienia konfiguracji @DISTRONAME@ i Kodi (usuwa wszystkie dane z partycji storage)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -186,7 +182,7 @@ msgstr "Konfiguruj hasło do Punktu Dostępowego "
 
 msgctxt "#730"
 msgid "Enable or disable support for Wired (Ethernet) networks"
-msgstr "Włącz lub wyłącz obsługę sieci (Ethernet) "
+msgstr "Włącz lub wyłącz obsługę sieci kablowej (Ethernet) "
 
 msgctxt "#731"
 msgid "Configure OpenVPN and PPTP VPN connections"
@@ -228,10 +224,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Ustaw hasło udostępniania usługi Samba"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "Zaznacz, aby aktywować serwer SSH. Konsola SSH jest dostępna po zalogowaniu sie jako \"root\" i hasło \"openelec\"."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Zaznacz, jeśli masz prywatne klucze SSH do HTPC i chcesz poprawić bezpieczeństwo wyłączając nazwę użytkownika i uwierzytelnianie SSH. "
@@ -263,10 +255,6 @@ msgstr "749 "
 msgctxt "#750"
 msgid "750"
 msgstr "750 "
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "OBEX jest używany do przesyłu danych takich jak filmy i zdjęcia za pośrednictwem bluetooth do systemu OpenELEC."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -661,8 +649,8 @@ msgid "Update Available"
 msgstr "Dostępna aktualizacja"
 
 msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "Chcesz zaktualizować OpenELEC?"
+msgid "Would you like to update @DISTRONAME@ now?"
+msgstr "Czy chcesz teraz zaktualizować @DISTRONAME@?"
 
 msgctxt "#32181"
 msgid "Filename"
@@ -718,7 +706,7 @@ msgstr "Usługa "
 
 msgctxt "#32194"
 msgid "Restart Networking"
-msgstr "Restart sieci"
+msgstr "Ponowne uruchomienie sieci"
 
 msgctxt "#32195"
 msgid "Support"
@@ -782,7 +770,7 @@ msgstr "Serwer Proxy "
 
 msgctxt "#32210"
 msgid "Auto Proxy URL"
-msgstr "Automatyczna konfiguracja adresowania Proxy "
+msgstr "Automatyczna konfiguracja Proxy "
 
 msgctxt "#32211"
 msgid "Proxy Servers"
@@ -809,36 +797,24 @@ msgid "Auto-Share External Drives"
 msgstr "Udostępnianie dysków zewnętrznych"
 
 msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Witaj w [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR "
+msgid "Welcome to @DISTRONAME@"
+msgstr "Witamy w @DISTRONAME@"
 
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Witamy"
 
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Kreator instalacji poprowadzi Cię przez proces instalacji i konfiguracji [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] - określenie strefy czasowej, ustawienie lokalizacji oraz połączenie do internetu.[CR][CR]Ustawienia te można później zmienić, przechodząc do Programy > Ustawienia [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR].[CR][CR] Aby rozpocząć przygodę z [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] określ ustawienia regionalne i układ klawiatury, a następnie kliknij przycisk Dalej."
-
 msgctxt "#32303"
 msgid "Next"
 msgstr "Dalej "
-
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "Aby umożliwić łatwą identyfikację w sieci [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] potrzebuje nazwy.[CR][CR]Postaraj się wybrać coś sensownego -  jak na przykład pokój w którym znajduje się system.[CR][CR]Ta nazwa jest używana podczas konfigurowania usług sieciowych, na przykład Samba."
 
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Sieć "
 
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "Pobieranie tapet, banerów, miniatur filmów i seriali oraz odtwarzanie mediów strumieniowych z serwisów takich jak YouTube wymaga, aby komputer z zainstalowanym systemem [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] był podłączony do Internetu.[CR][CR]Połączenie internetowe jest także wymagane do automatycznej aktualizacji systemu [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]."
-
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
-msgstr "Wybierz Ustawienia regionalne: "
+msgstr "Ustawienia regionalne: "
 
 msgctxt "#32308"
 msgid "Hostname:"
@@ -856,14 +832,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Udostępnianie i dostęp zdalny "
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] obsługuje protokół zdalnego dostępu SSH. Usługa skierowana jest do zaawansowanych użytkowników, którzy chcą mieć większą kontrolę nad [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]. Domyślny użytkownik to [COLOR blue]root[/COLOR] a domyślne hasło to [COLOR blue]openelec[/COLOR]."
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "Aby udostępniać pliki między różnymi komputerami [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] musi mieć włączoną usługę serwera Samba. Serwer może zostać z łatwością zintegrowany w sieci lokalnej poprzez znany sposób z Findera lub Eksploratora Windows."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "aktywne"
@@ -879,10 +847,6 @@ msgstr "Konfiguracja usług: "
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Dziękujemy"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "Instalacja [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] dobiegła końca. Teraz zostaniesz przeniesiony do ustawień Kodi gdzie możesz wskazać swoje biblioteki multimediów. Pomoc dostępna jest na stronie: wiki.xbmc.org [CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] jest rozwijany przez zespół programistów, którzy pracują wyłącznie w wolnym czasie. Nawet jako projekt składający się z wolontariuszy, nadal musimy płacić za utrzymanie naszych serwerów i zasobów rozwojowych. Jeżeli [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] jest dla Ciebie użyteczny, zawsze będziemy bardzo wdzięczni za wpłaty jakiejkolwiek kwoty.[CR][CR]Mamy nadzieję, że [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] daje Ci wiele radości tak samo jak nam praca nad tym systemem. Jeśli potrzebujesz więcej pomocy lub szukasz najnowszych informacji zajrzyj na stronę: openelec.tv."
 
 msgctxt "#32319"
 msgid "Cron"
@@ -907,10 +871,6 @@ msgstr "Przywróć domyślne"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Przywróć domyślne ustawienia systemu"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Przywróć domyślne ustawienia OpenELEC"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -986,7 +946,7 @@ msgstr "Włącz Bluetooth "
 
 msgctxt "#32345"
 msgid "Bluetooth daemon is not running!"
-msgstr "Bluetooth nie działa! "
+msgstr "Usługa Bluetooth nie jest uruchomiona! "
 
 msgctxt "#32346"
 msgid "Bluetooth is disabled"
@@ -1013,8 +973,8 @@ msgid "Check for updates now:"
 msgstr "Sprawdź aktualizacje:"
 
 msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] "
+msgid "@DISTRONAME@"
+msgstr "@DISTRONAME@"
 
 msgctxt "#32364"
 msgid "Update available"
@@ -1038,7 +998,7 @@ msgstr "Zaawansowane ustawienia sieci "
 
 msgctxt "#32369"
 msgid "Wait for network before starting Kodi"
-msgstr "Poczekaj na połączenie do sieci przed ruruchomieniem Kodi"
+msgstr "Oczekuj na połączenie do sieci przed uruchomieniem Kodi"
 
 msgctxt "#32370"
 msgid "Maximum Wait Time (Sec.)"
@@ -1118,8 +1078,8 @@ msgstr "Wyłącz tryb czuwania"
 
 msgctxt "#32390"
 msgid "Settings addon is not yet ready, please try again later."
-msgstr "Ustawienia nie są jeszcze gotowe, spróbuj ponownie później."
+msgstr "Kreator ustawień nie jest jeszcze dostępny, spróbuj ponownie później."
 
 msgctxt "#32391"
 msgid "Enable LCD Driver Support"
-msgstr "Włącz obsługę sterownika LCD"
+msgstr "Włącz obsługę wyświetlacza LCD"
