--- a/language/Russian/strings.po
+++ b/language/Russian/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "Настройка [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#601"
 msgid "Interface"
@@ -104,10 +100,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Конфигурация имени хоста Вашей системы OpenELEC. С помощью данного имени Ваш HTPC будет виден в сети Windows как \\\\имя_хоста, а также в проводнике Mac OS как удаленный сервер с сетевыми дисками"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "Конфигурация основной раскладки клавиатуры"
@@ -120,25 +112,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Конфигурация физического типа клавиатуры"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC можно настроить для автоматического или ручного обновления ПО. Автоматические обновления доступны только на стабильных релизах и кандидатах в релизы. Автоматические обновления заблокированы на бета-версиях и девелопмент-сборках"
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "В положении ВКЛ на экране будут появляться уведомления о доступности нового ПО для обновления"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Нажмите для ручной проверки обновлений на серверах OpenELEC"
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Если у Вас небольшой LCD или VFD дисплей, подключенный к системе OpenELEC - Вы должны сконфигурировать правильный драйвер дисплея"
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "Выберите ВКЛ и OpenELEC будет каждый раз пытаться останавливать Ваши жесткие диски (кроме основного диска) при простоях системы для экономии электричества"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -152,21 +128,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Создание tar-архива со всеми настройками OpenELEC и Kodi, всеми базами данных и миниатюрами. Резервные копии будут сохранены в /storage/backups"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Восстановление резервной копии из tar-архива, созданной с помощью опции резервного копирования"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]МЯГКИЙ СБРОС[/COLOR]\nВосстанавливает параметры ОС OpenELEC по умолчанию (также сбрасываются настройки Kodi, включая библиотеку; медиафайлы — музыка, видео и т.п. — остаются без изменений)"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]ЖЁСТКИЙ СБРОС[/COLOR]\nВосстанавливает параметры для умолчанию для ОС OpenELEC и Kodi (содержимое раздела хранения будет удалено)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -228,10 +192,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Задайте пароль для доступа к файловым ресурсам Samba"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "Выберите ВКЛ для включения встроенного SSH-сервера. Пользователь и пароли по-умолчанию для SSH:  пользователь: 'root', пароль: 'openelec'."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Выберите ВКЛ, если Вы скопировали Ваш публичный SSH-ключ на Ваш HTPC и хотите усилить безопасность путем выключения авторизации по паролю, оставив только авторизацию по ключу. "
@@ -263,10 +223,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "С помощью файловой передачи OBEX можно отправлять файлы, например фильмы или фотографии, через Bluetooth в OpenELEC."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -660,10 +616,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "Доступно обновление"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "Обновить OpenELEC сейчас?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "Имя файла"
@@ -808,33 +760,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "Автоматически открывать общий доступ к внешним дискам"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Добро пожаловать в [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Добро пожаловать"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Данный мастер поможет Вам настроить [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] - региональные настройки, временную зону и соединение с интернет.[CR][CR]Данные настройки смогут быть изменены позднее с помощью Программы > Настройки [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR].[CR][CR]Для продолжения выберите Ваши региональные предпочтения и раскладку клавиатуры, затем нажмите кнопку \"Далее\"."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "Следующ."
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "Для легкой идентификации в сети, Ваш новый [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] компьютер нуждается в имени.[CR][CR]Попробуйте выбрать что-нибудь узнаваемое, например номер комнаты или еще что-то, чтобы однозначно знать, о какой машине идет речь.[CR][CR]Это имя также используется в сетевых сервисах, таких как файловый сервис Samba."
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Сетевые настройки"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "Для загрузки фоновых изображений, баннеров и миниатюр для Ваших фильмов и ТВ-передач, а также для просмотра онлайн-контента, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] требуется доступ в сеть Internet.[CR][CR]Интернет-соединение также требуется автоматического обновления [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -856,14 +792,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Общие ресурсы и удаленный доступ"
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] также поддерживает SSH для удаленного доступа. Данная опция для продвинутых пользоваталей, которые желают взаимодействовать с [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] напрямую. Пользователь по-умолчанию [COLOR blue]root[/COLOR] и пароль по-умолчанию [COLOR blue]openelec[/COLOR]."
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "Для обмена файлами между Вашими компьютерами [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] имеет встроенный samba сервер. Данный сервер предоставляет доступ к файлам на Вашем HTPC с помощью стандартных средств проводника Windows или Finder Mac OS."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "включено"
@@ -879,10 +807,6 @@ msgstr "Конфигурация служб:"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Спасибо Вам"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "Установка [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] успешно завершена и теперь Вы можете войти в Kodi и настроить медиа-библиотеки и другие параметры под себя. Дополнительную помощь и инструкции Вы сможете найти на сайте wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] разрабатывается распределенной командой разработчиков, которые работаю в свободное время над этим проектом. Даже с учетом того, что данный проект держится чисто на энтузиазме, нам все равно необходимо платить за интернет и хостинг, поэтому если Вы находите [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] достойным для использования, мы будет рады получить от Вас пожертвование на любую сумму.[CR][CR]Мы надеемся, что Вы насладитесь использованием [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] так же, как мы наслаждаемся процессом его  разработки. Если Вам нужна более детальная информация или помощь - Вы всегда можете найти ссылки и полезную информацию, а также новости на нашем сайте openelec.tv"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -907,10 +831,6 @@ msgstr "Сбросить в настройки по-умолчанию"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Сбросить системные настройки по-умолчанию"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Сбросить OpenELEC в настройки по-умолчанию"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1011,10 +931,6 @@ msgstr "Следующая информация некорректна:"
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "Проверка обновлений:"
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
