--- a/language/Slovenian/strings.po
+++ b/language/Slovenian/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -96,6 +96,10 @@ msgctxt "#32191"
 msgid "Error"
 msgstr "Napaka"
 
+msgctxt "#32193"
+msgid "Service"
+msgstr "Storitev"
+
 msgctxt "#32200"
 msgid "Samba"
 msgstr "Samba"
@@ -115,6 +119,10 @@ msgstr "Izhod"
 msgctxt "#32303"
 msgid "Next"
 msgstr "Naslednji"
+
+msgctxt "#32315"
+msgid "disabled"
+msgstr "onemogočeno"
 
 msgctxt "#32326"
 msgid "Are you sure?"
