--- a/language/Spanish/strings.po
+++ b/language/Spanish/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -15,10 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
 
 msgctxt "#601"
 msgid "Interface"
@@ -104,10 +100,6 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
-msgctxt "#710"
-msgid "Configure the Hostname of your OpenELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Configura el nombre de host de su sistema OpenELEC. Este se utilizará para el \"\\\\Nombre de Host del HTPC\" en los servidores de Windows y SMB en el Buscador de Mac OS"
-
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "Configuración de la disposición del primer teclado de software."
@@ -120,25 +112,9 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Configuración del tipo de teclado físico"
 
-msgctxt "#714"
-msgid "OpenELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "OpenELEC puede ser configurado para recibir actualizaciones de forma automática o manual. Las actualizaciones automáticas están disponibles en versiones RC y estables. Las actualizaciones automáticas se desactivan automáticamente en las versiones beta y en las versiones de desarrollo"
-
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "Notificación de actualizaciones"
-
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "Comprobación manual de actualizaciones. "
-
-msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your OpenELEC system you must configure the correct display driver"
-msgstr "Si usas una pantalla LCD/VFD pequeña debes configurar su controlador correspondiente"
-
-msgctxt "#718"
-msgid "Set on ON and OpenELEC will spin down attached drives (not the main system drive) when idle"
-msgstr "La activación de la opción hará que OpenELEC detenga los discos conectados cuando se encuentre en reposo (no se aplica al disco principal del sistema)"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -152,21 +128,9 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
-msgctxt "#722"
-msgid "Create a tar archive containing all OpenELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Crear un archivo comprimido tar conteniendo las configuraciones completas, bases de datos y vistas en minuatura de OpenELEC y Kodi. Los archivos de resguardo estarán almacenados en /storage/backups"
-
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Restaurar un archivo tar creado previamente utilizando la opción de resguardo más arriba"
-
-msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]SOFT RESET[/COLOR]\nAplica la configuración original de OpenELEC (también restaura la configuración de Kodi, incluida tu colección, pero sin afectar a tus ficheros de música/vídeos/etc)"
-
-msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]HARD RESET[/COLOR]\nAplica la configuración original de OpenELEC y de Kodi (ATENCIÓN: se eliminará todo el contenido de la carpeta de almacenamiento y perderás todos tus ficheros - música/vídeos/etc)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -228,10 +192,6 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Contraseña Samba"
 
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "Active la opción para habilitar el servidor SSH incorporado. Se puede acceder a la consola utilizando el nombre de usuario 'root' y la contraseña 'openelec'."
-
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Active la opción si ha copiado su clave privada SSH a su HTPC y quisiera mejorar la seguridad deshabilitando la autenticación SSH de usuario/contraseña."
@@ -263,10 +223,6 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
-
-msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
-msgstr "Con la transferencia de archivos OBEX puedes enviar archivos, por ejemplo videos o fotos, por Bluetooth a OpenELEC."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -660,10 +616,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "Actualización Disponible"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "¿Desea actualizar OpeneELEC ahora?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "Nombre de Archivo"
@@ -808,33 +760,17 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "Auto compartir unidades externas"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Bienvenido"
-
-msgctxt "#32302"
-msgid "This wizard will guide you through the process of setting up your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings.[CR][CR]To begin your [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] experience, select your regional settings and your keyboard layout, then click Next."
-msgstr "Este asistente le guiará a través del proceso de configuración de nueva instalación de [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] - configurando su localización, zona horaria y conectándolo a Internet.[CR][CR]Estos ajustes se podrán modificar posteriormente accediendo a Programas > Ajustes de [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR].[CR][CR] Para comenzar su experiencia [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR], seleccione su configuración regional y su tipo de teclado; después pulse \"Siguiente\"."
 
 msgctxt "#32303"
 msgid "Next"
 msgstr "Siguiente"
 
-msgctxt "#32304"
-msgid "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-msgstr "To be identified easily on the network, your new [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
-
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Redes"
-
-msgctxt "#32306"
-msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
-msgstr "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] needs to be connected the Internet.[CR][CR]An Internet connection is also required for [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] to automatically update itself."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -856,14 +792,6 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Conpartir y acceso remoto"
 
-msgctxt "#32312"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] also supports SSH for remote access. This is for advanced users who wish to interact with [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]openelec.[/COLOR]"
-
-msgctxt "#32313"
-msgid "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-msgstr "In order to share your files between your computers [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
-
 msgctxt "#32314"
 msgid "enabled"
 msgstr "Activado"
@@ -879,10 +807,6 @@ msgstr "Configurar servicios"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Gracias"
-
-msgctxt "#32318"
-msgid "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
-msgstr "You [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.xbmc.org[CR][CR][COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at openelec.tv"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -907,10 +831,6 @@ msgstr "Restaurar valores por defecto"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Restaurar los ajustes de sistema por defecto"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "Restaurar OpenELEC a los valores por defecto"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -1011,10 +931,6 @@ msgstr "Las siguientes informaciones son inválidas"
 msgctxt "#32362"
 msgid "Check for updates now:"
 msgstr "Comprobar actualizaciones"
-
-msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 
 msgctxt "#32364"
 msgid "Update available"
