--- a/language/Thai/strings.po
+++ b/language/Thai/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -87,6 +87,10 @@ msgstr "พอร์ต"
 msgctxt "#32191"
 msgid "Error"
 msgstr "ผิดพลาด"
+
+msgctxt "#32193"
+msgid "Service"
+msgstr "บริการ"
 
 msgctxt "#32196"
 msgid "About"
