--- a/language/Turkish/strings.po
+++ b/language/Turkish/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -17,8 +17,8 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgctxt "#600"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Settings"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR] Ayarları"
+msgid "@DISTRONAME@ Settings"
+msgstr "@DISTRONAME@ Ayarları"
 
 msgctxt "#601"
 msgid "Interface"
@@ -112,10 +112,6 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Fiziksel klavye türünü yapılandır"
 
-msgctxt "#716"
-msgid "Click to manually check the OpenELEC servers for an updated release"
-msgstr "OpenELEC sunucularındaki güncel sürümü el ile kontrol etmek için tıklayın."
-
 msgctxt "#721"
 msgid "721"
 msgstr "721"
@@ -163,10 +159,6 @@ msgstr "Samba paylaşımı için kullanıcı adını ayarla"
 msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Samba paylaşımı için parolayı ayarla"
-
-msgctxt "#742"
-msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password 'openelec'."
-msgstr "embedded SSH sunucusunu etkinleştirmek için AÇIK olarak ayarlayın. SSH konsoluna erişim için kullanıcı adı 'root' ve şifre 'openelec'."
 
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
@@ -492,10 +484,6 @@ msgctxt "#32179"
 msgid "Update Available"
 msgstr "Güncelleme Var"
 
-msgctxt "#32180"
-msgid "Would you like to update OpenELEC now?"
-msgstr "OpenELEC'i şimdi güncellemek ister misiniz?"
-
 msgctxt "#32181"
 msgid "Filename"
 msgstr "Dosya adı"
@@ -640,10 +628,6 @@ msgctxt "#32216"
 msgid "Auto-Share External Drives"
 msgstr "Dış Sürücüleri Otomatik Paylaş"
 
-msgctxt "#32300"
-msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]'e Hoşgeldiniz"
-
 msgctxt "#32301"
 msgid "Welcome"
 msgstr "Hoşgeldiniz"
@@ -711,10 +695,6 @@ msgstr "Varsayılanlara Sıfırla"
 msgctxt "#32324"
 msgid "Reset System Settings to defaults"
 msgstr "Sistem ayarlarını varsayılanlara sıfırla"
-
-msgctxt "#32325"
-msgid "Reset OpenELEC to defaults"
-msgstr "OpenELEC'i varsayılanlara sıfırla"
 
 msgctxt "#32326"
 msgid "Are you sure?"
@@ -813,8 +793,8 @@ msgid "Check for updates now:"
 msgstr "Güncellemeleri denetle:"
 
 msgctxt "#32363"
-msgid "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
-msgstr "[COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
+msgid "@DISTRONAME@"
+msgstr "@DISTRONAME@"
 
 msgctxt "#32364"
 msgid "Update available"
