--- a/language/Ukrainian/strings.po
+++ b/language/Ukrainian/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -95,6 +95,10 @@ msgstr "Порт"
 msgctxt "#32191"
 msgid "Error"
 msgstr "Помилка"
+
+msgctxt "#32193"
+msgid "Service"
+msgstr "Служба"
 
 msgctxt "#32200"
 msgid "Samba"
