--- a/language/Uzbek/strings.po
+++ b/language/Uzbek/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -16,9 +16,21 @@ msgstr ""
 "Language: uz\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "#602"
+msgid "Address"
+msgstr "Manzil"
+
 msgctxt "#603"
 msgid "Type"
 msgstr "Turi"
+
+msgctxt "#604"
+msgid "State"
+msgstr "Viloyat"
+
+msgctxt "#605"
+msgid "Address"
+msgstr "Manzil"
 
 msgctxt "#32000"
 msgid "Network"
@@ -28,9 +40,17 @@ msgctxt "#32001"
 msgid "Services"
 msgstr "Xizmatlar"
 
+msgctxt "#32002"
+msgid "System"
+msgstr "Tizim"
+
 msgctxt "#32005"
 msgid "Type"
 msgstr "Turi"
+
+msgctxt "#32006"
+msgid "State"
+msgstr "Viloyat"
 
 msgctxt "#32101"
 msgid "Network"
@@ -52,6 +72,14 @@ msgctxt "#32142"
 msgid "Refresh"
 msgstr "Yangilash"
 
+msgctxt "#32145"
+msgid "Unable to connect"
+msgstr "Ulanib bo'lmadi"
+
+msgctxt "#32168"
+msgid "Port"
+msgstr "Port"
+
 msgctxt "#32191"
 msgid "Error"
 msgstr "Xato"
@@ -64,9 +92,21 @@ msgctxt "#32213"
 msgid "Exit"
 msgstr "Chiqish"
 
+msgctxt "#32303"
+msgid "Next"
+msgstr "Keyingi"
+
 msgctxt "#32326"
 msgid "Are you sure?"
 msgstr "Ishonchingiz komilmi?"
+
+msgctxt "#32332"
+msgid "Address"
+msgstr "Manzil"
+
+msgctxt "#32334"
+msgid "Yes"
+msgstr "Ha"
 
 msgctxt "#32335"
 msgid "No"
