--- a/language/Vietnamese (Viet Nam)/strings.po
+++ b/language/Vietnamese (Viet Nam)/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: OpenELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.openelec.settings
 # Addon Provider: OpenELEC
 msgid ""
@@ -16,6 +16,14 @@ msgstr ""
 "Language: vi_VN\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "#32001"
+msgid "Services"
+msgstr "Dịch vụ"
+
+msgctxt "#32002"
+msgid "System"
+msgstr "Hệ thống"
+
 msgctxt "#32140"
 msgid "Save"
 msgstr "Lưu"
@@ -24,6 +32,10 @@ msgctxt "#32141"
 msgid "Delete"
 msgstr "Xóa"
 
+msgctxt "#32142"
+msgid "Refresh"
+msgstr "Làm tươi"
+
 msgctxt "#32191"
 msgid "Error"
 msgstr "Lỗi"
@@ -31,3 +43,19 @@ msgstr "Lỗi"
 msgctxt "#32212"
 msgid "Cancel"
 msgstr "Hủy bỏ"
+
+msgctxt "#32303"
+msgid "Next"
+msgstr "Tiếp theo"
+
+msgctxt "#32334"
+msgid "Yes"
+msgstr "Có"
+
+msgctxt "#32335"
+msgid "No"
+msgstr "Không"
+
+msgctxt "#32382"
+msgid "Speed"
+msgstr "Tốc độ"
